[package]
name = "create_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }
svg = "0.13.1"
eyre = "0.6.8"
serde_json = "1.0.102"
petgraph = { path = "../../petgraph" }
itertools = "0.8.0"
