[package]
name = "prelude"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { path = "../../petgraph" }
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.100"
tokio = {version = "1.29.1", optional = true}
svg = "0.13.1"
eyre = "0.6.8"
itertools = "0.8.0"
surrealdb = { version = "1.0.0-beta.9", optional = true}

[features]
default = ["ssr", "hydrate"]
hydrate = []
ssr = ["dep:surrealdb", "dep:tokio"]
