[package]
name = "prelude"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { path = "../../petgraph", optional = true }
serde = { version = "1.0.171", features = ["derive", "rc"], optional = true }
serde_json = {version = "1.0.100", optional = true}
tokio = {version = "1.29.1", optional = true}
svg = {version = "0.13.1", optional = true}
eyre = "0.6.8"
itertools = "0.8.0"
surrealdb = { version = "1.0.0-beta.9", optional = true}

[features]
default = ["ssr", "hydrate"]
hydrate = []
ssr = [
	"dep:surrealdb",
	"dep:tokio",
	"dep:serde",
	"dep:serde_json",
	"dep:svg",
	"dep:petgraph",
]
