[package]
name = "prelude"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { path = "../../petgraph" }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = {version = "1.0.105" }
tokio = {version = "1.32.0", optional = true }
svg = {version = "0.13.1" }
anyhow = "1.0.75"
itertools = "0.11.0"
surrealdb = { version = "1.0.0-beta.10", optional = true }
polylabel = "2.5"
geo = "0.26"


[features]
default = ["ssr"]
ssr = [
	"dep:tokio",
	"dep:surrealdb",
]
